--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Demo Project</string>
+    <string name="right_arrow">right arrow</string>
+    <string name="description_image">description image</string>
+    <string name="no_internet_connection">No Internet Connection!</string>
+    <string name="something_went_wrong">Something Went Wrong!</string>
 </resources>
